--- a/OpenCVCourse/OpenCVCourse.vcxproj.filters
+++ b/OpenCVCourse/OpenCVCourse.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test.cpp">
+    <ClCompile Include="Chapter1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Chapter2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
